--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,7 @@
 }
 
 .CardStyle :hover {
-  background-color: #FF6347;
+  background-color: rgb(255, 50, 0);
   color: #fff;
   transition: 0.5s;
 }
